--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -9,16 +9,21 @@
     tools:context=".MainActivity">
 
 
-
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/scan"
-    android:text="Scan It"
-    android:layout_gravity="center"/>
-    <TextView
+    <ListView
         android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_height="400dp"
+        android:id="@+id/result"/>
+
+    <Button
+        android:id="@+id/scan"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/result"
-        android:textSize="24dp"/>
-</LinearLayout>
+        android:layout_below="@+id/result"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:text="Scan It" />
+
+
+</RelativeLayout>
